2012-05-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Reorder dependencies for mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml (gcc-core): Factor out dependency
	declarations common to all releases; order all version specific
	references before version agnostic references, to avoid possible
	accidental scheduling of mismatched versions for installation.
	(gcc-ada): Factor out common dependency declarations.
	Regenerate, and republish.

	* mingw32/issue.log: Update accordingly.

2012-04-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix post/pre-remove conflict in mingw-get.xml scripting.

	* mingw32/mingw32-mingw-get.xml (mingw-get-bin.post-remove): Can't
	use post-remove script here, after helper modules removed; replace...
	(mingw-get-bin.pre-remove): ...with this; regenerate and republish.

	* mingw32/issue.log: Update accordingly.

2012-04-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.5-mingw32-beta-20120426-1 release.

	* mingw32/mingw32-mingw-get.xml: Update and republish.
	* mingw32/issue.log: Updated accordingly.

2012-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.5-mingw32-beta-20120416-1 release.

	* mingw32/mingw32-mingw-get.xml: Update and republish.
	* mingw32/issue.log: Updated accordingly.

2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct msys-dos2unix doc and licence package reference anomalies.

	* msys/msys-dos2unix.xml: Update and republish.
	(cygutils-dos2unix-1.3.4-4-msys-1.0.13-doc.tar.lzma): Declare it as a
	virtual package; add 'requires' specification, linking it to...
	(cygutils-1.3.4-4-msys-1.0.13-doc.tar): ...this.
	(cygutils-dos2unix-1.3.4-4-msys-1.0.13-lic.tar.lzma): Likewise...
	(cygutils-1.3.4-4-msys-1.0.13-lic.tar): ...linking to this.

	* msys/issue.log: Updated accordingly.

2012-04-09  Erwin Waterlander  <waterlan@xs4all.nl>

	Replace msys-cygutils-dos2unix with msys-dos2unix.
