@@ -23,18 +23,21 @@
         <release tarname="zlib-1.2.3-1-mingw32-doc.tar.gz" />
         <release tarname="zlib-1.2.5-1-mingw32-doc.tar.lzma" />
         <release tarname="zlib-1.2.5-4-mingw32-doc.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="zlib-1.2.3-1-mingw32-lic.tar.gz" />
         <release tarname="zlib-1.2.5-1-mingw32-lic.tar.lzma" />
         <release tarname="zlib-1.2.5-4-mingw32-lic.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="man">
         <release tarname="zlib-1.2.3-1-mingw32-man.tar.gz" />
         <release tarname="zlib-1.2.5-1-mingw32-man.tar.lzma" />
         <release tarname="zlib-1.2.5-4-mingw32-man.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-mingw32-man.tar.lzma" />
       </component>
     </package>
 
@@ -59,6 +62,9 @@
         <release tarname="libz-1.2.5-4-mingw32-dll-1.tar.lzma" >
           <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
         </release>
+        <release tarname="libz-1.2.7-1-mingw32-dll-1.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+        </release>
       </component>
 
       <component class="dev">
@@ -71,6 +77,61 @@
         <release tarname="libz-1.2.5-4-mingw32-dev.tar.lzma" >
           <requires eq="mingw32-libz-%-mingw32-%-dll-1.tar" />
         </release>
+        <release tarname="libz-1.2.7-1-mingw32-dev.tar.lzma" >
+          <requires eq="mingw32-libz-%-mingw32-%-dll-1.tar" />
+        </release>
+      </component>
+    </package>
+
+    <package name="mingw32-minizip" alias="minizip">
+      <description lang="en" title="MiniZip: Simple ZIP support from zlib">
+        <paragraph>The minizip package provides two simple ZIP archive
+          manipulation tools, based on the minizip library from zlib.  More
+          sophisticated needs are met by the unzip and zip packages.
+        </paragraph>
+        <paragraph>The libminizip library provides zlib-based support for
+          manipulating ZIP archives. It is suitable for clients that need only
+          create, inspect, and unpack such archives; more demanding needs may be
+          met by the libarchive package.
+        </paragraph>
+      </description>
+
+      <licence tarname="zlib-%-mingw32-%-lic.tar.%" />
+      <source tarname="zlib-%-mingw32-%-src.tar.%" />
+
+      <component class="bin">
+        <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+        <requires eq="mingw32-libminizip-%-mingw32-dll-1.tar" />
+        <release tarname="minizip-1.2.7-1-mingw32-bin.tar.lzma" />
+      </component>
+    </package>
+
+    <package name="mingw32-libminizip" alias="libminizip">
+      <description lang="en" title="MiniZip: Simple ZIP support from zlib">
+        <paragraph>The minizip library provides zlib-based support for
+          manipulating ZIP archives. It is suitable for clients that need only
+          create, inspect, and unpack such archives; more demanding needs may be
+          met by the libarchive package.
+        </paragraph>
+        <paragraph>This distribution also provides two simple utility programs:
+          minizip and miniunzip. Again, more sophisticated needs are met by the
+          unzip and zip packages.
+        </paragraph>
+      </description>
+
+      <licence tarname="zlib-%-mingw32-%-lic.tar.%" />
+      <source tarname="zlib-%-mingw32-%-src.tar.%" />
+
+      <component class="dll">
+        <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+        <requires eq="mingw32-libz-%-mingw32-dll-1.tar" />
+        <release tarname="libminizip-1.2.7-1-mingw32-dll-1.tar.lzma" />
+      </component>
+
+      <component class="dev">
+        <requires eq="mingw32-libz-%-mingw32-dev.tar" />
+        <requires eq="mingw32-libminizip-%-mingw32-dll-1.tar" />
+        <release tarname="libminizip-1.2.7-1-mingw32-dev.tar.lzma" />
       </component>
     </package>
 
