@@ -92,6 +92,6 @@
   fe8fd3bf13c92bc9792636e7f9d07b38a574368f 2011101100 msys-wget.xml
   21bd073bc49a2d941f1a78a4f1e998b997b1a126 2011110700 msys-xz.xml
   352e88a18d2369c4955a52740920c50639b43baf 2011101100 msys-zip.xml
-  94b099c93c13b9aef6b0a01218605f9f6e6b5dbc 2011101400 msys-zlib.xml
+  39558d42cfd847d17d74d22f8d9a00b6318ab31f 2012051700 msys-zlib.xml
 #
 # $RCSfile$: end of file
