@@ -23,23 +23,77 @@
           -->
         <release tarname="zlib-1.2.3-2-msys-1.0.13-dll.tar.lzma" />
         <release tarname="zlib-1.2.5-1-msys-1.0.17-dll.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-msys-1.0.17-dll.tar.lzma" />
         <requires eq="msys-core-*-msys-*-bin.tar" />
       </component>
 
       <component class="dev">
         <release tarname="zlib-1.2.3-2-msys-1.0.13-dev.tar.lzma" />
         <release tarname="zlib-1.2.5-1-msys-1.0.17-dev.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-msys-1.0.17-dev.tar.lzma" />
         <requires eq="msys-zlib-%-msys-%-dll.tar" />
       </component>
 
       <component class="doc">
         <release tarname="zlib-1.2.3-2-msys-1.0.13-doc.tar.lzma" />
         <release tarname="zlib-1.2.5-1-msys-1.0.17-doc.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-msys-1.0.17-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="zlib-1.2.3-2-msys-1.0.13-lic.tar.lzma" />
         <release tarname="zlib-1.2.5-1-msys-1.0.17-lic.tar.lzma" />
+        <release tarname="zlib-1.2.7-1-msys-1.0.17-lic.tar.lzma" />
+      </component>
+    </package>
+
+    <package name="msys-minizip">
+      <description lang="en" title="MiniZip: Simple ZIP support from zlib">
+        <paragraph>The minizip package provides two simple ZIP archive
+          manipulation tools, based on the minizip library from zlib.  More
+          sophisticated needs are met by the unzip and zip packages.
+        </paragraph>
+        <paragraph>The libminizip library provides zlib-based support for
+          manipulating ZIP archives. It is suitable for clients that need only
+          create, inspect, and unpack such archives; more demanding needs may be
+          met by the libarchive package.
+        </paragraph>
+      </description>
+
+      <licence tarname="zlib-%-msys-%-lic.tar.%" />
+      <source tarname="zlib-%-msys-%-src.tar.%" />
+
+      <component class="bin">
+        <requires eq="msys-libminizip-%-msys-%-dll-1.tar" />
+        <release tarname="minizip-1.2.7-1-msys-1.0.17-bin.tar.lzma" />
+      </component>
+    </package>
+
+    <package name="msys-libminizip">
+      <description lang="en" title="MiniZip: Simple ZIP support from zlib">
+        <paragraph>The minizip library provides zlib-based support for
+          manipulating ZIP archives. It is suitable for clients that need only
+          create, inspect, and unpack such archives; more demanding needs may be
+          met by the libarchive package.
+        </paragraph>
+        <paragraph>This distribution also provides two simple utility programs:
+          minizip and miniunzip. Again, more sophisticated needs are met by the
+          unzip and zip packages.
+        </paragraph>
+      </description>
+
+      <licence tarname="zlib-%-msys-%-lic.tar.%" />
+      <source tarname="zlib-%-msys-%-src.tar.%" />
+
+      <component class="dll">
+        <requires eq="msys-zlib-%-msys-%-dll-1.tar" />
+        <release tarname="libminizip-1.2.7-1-msys-1.0.17-dll-1.tar.lzma" />
+      </component>
+
+      <component class="dev">
+        <requires eq="msys-zlib-%-msys-%-dev.tar" />
+        <requires eq="msys-libminizip-%-msys-%-dll-1.tar" />
+        <release tarname="libminizip-1.2.7-1-msys-1.0.17-dev.tar.lzma" />
       </component>
     </package>
 
